<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".uilayer.ui.fragments.UserFragment">

    <TextView
        android:id="@+id/userIdTv"
        android:layout_width="404dp"
        android:layout_height="67dp"
        android:background="@color/cardview_shadow_end_color"
        android:text="@string/userinfo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <Button
        android:id="@+id/getUserByIdButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/getUserButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.311"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userIdTv"
        app:layout_constraintVertical_bias="0.056" />

    <EditText
        android:id="@+id/userIdField"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:autofillHints="User Id"
        android:inputType="number"
        android:minHeight="48dp"
        android:text="@string/_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/getUserByIdButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.168"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/getAllUserButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_all_users"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.659"
        app:layout_constraintStart_toEndOf="@+id/getUserByIdButton"
        app:layout_constraintTop_toBottomOf="@+id/userIdTv"
        app:layout_constraintVertical_bias="0.056" />

</androidx.constraintlayout.widget.ConstraintLayout>