<resources>
    <string name="app_name">MVVM</string>
    <string name="userinfo">Users Info</string>
    <string name="getUserButton">Get User By ID</string>
    <string name="_1">1</string>
    <string name="get_all_users">Get All Users</string>
</resources>